--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,13 @@ testem.log
 /typings
 
 # e2e
-/e2e/*.js
-/e2e/*.map
+website/e2e/*.js
+website/e2e/*.map
 
 # System Files
 .DS_Store
 Thumbs.db
+
+#package shiet
+website/package-lock*
+server/package-lock*
