--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run": "node server.js",
+    "run": "node server.jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
