--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "body-parser": "~1.0.1",
     "express": "^4.16.2",
-    "mongodb": "^2.2.33",
-    "mongoose": "~3.6.13"
+    "mongodb": "^2.2.16",
+    "mongoose": "4.7.6"
   }
 }
