--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
     "express": "^4.16.2",
     "mongodb": "^2.2.16",
     "mongoose": "4.7.6"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
