--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongodb": "^2.2.16",
-    "mongoose": "4.7.6",
+    "mongoose": "^4.7.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
