--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^2.2.16",
     "mongoose": "^4.7.6",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "spotify-web-api-node": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
