--- a/website/package.json
+++ b/website/package.json
@@ -27,7 +27,6 @@
     "@angular/router": "^4.4.6",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
-    "typescript": "^2.6.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -49,6 +48,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.3.3"
+    "typescript": "^2.3.4"
   }
 }
