--- a/website/package.json
+++ b/website/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng build --watch",
-    "build": "ng build",
+    "start": "node server.js",
+    "build": "ng build --watch",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -25,12 +25,13 @@
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/platform-server": "^4.4.6",
     "@angular/router": "^4.4.6",
-    "bcrypt-nodejs": "0.0.3",
     "@auth0/angular-jwt": "^1.0.0-beta.2",
+    "bcrypt-nodejs": "0.0.3",
     "core-js": "^2.4.1",
     "express-session": "^1.15.6",
     "mongoose": "^4.13.0",
     "passord": "^1.1.2",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
