Add wordcloud component with sample data

--- a/website/package.json
+++ b/website/package.json
@@ -26,10 +26,12 @@
     "@angular/platform-server": "^4.4.6",
     "@angular/router": "^4.4.6",
     "@auth0/angular-jwt": "^1.0.0-beta.2",
+    "angular4-word-cloud": "^1.0.2",
     "bcrypt-nodejs": "0.0.3",
     "core-js": "^2.4.1",
+    "d3": "^4.11.0",
     "express-session": "^1.15.6",
-    "mongoose": "^4.13.0",
+    "mongoose": "^4.13.1",
     "passord": "^1.1.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
