--- a/website/package.json
+++ b/website/package.json
@@ -36,6 +36,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rxjs": "^5.4.2",
+    "typescript": "^2.3.4",
     "zingchart-angularjs": "^1.2.0",
     "zone.js": "^0.8.14"
   },
@@ -58,6 +59,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "^2.6.1"
+    "typescript": "^2.3.4"
   }
 }
