--- a/website/package.json
+++ b/website/package.json
@@ -25,14 +25,15 @@
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/platform-server": "^4.4.6",
     "@angular/router": "^4.4.6",
-    "bcrypt-nodejs": "0.0.3",
     "@auth0/angular-jwt": "^1.0.0-beta.2",
+    "bcrypt-nodejs": "0.0.3",
     "core-js": "^2.4.1",
     "express-session": "^1.15.6",
     "mongoose": "^4.13.0",
     "passord": "^1.1.2",
     "passport-local": "^1.0.0",
     "rxjs": "^5.4.2",
+    "spotify-web-api-node": "^2.5.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
