--- a/website/package.json
+++ b/website/package.json
@@ -36,6 +36,7 @@
     "passord": "^1.1.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "request": "^2.83.0",
     "rxjs": "^5.4.2",
     "spotify-web-api-node": "^2.5.0",
     "typescript": "^2.3.4",
